Configure project to produce .jar and .exe artifacts